--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    /> -->
     <style>
       * {
         margin: 0;
+        font-family: "Poppins", sans-serif;
+        color: white;
+      }
+      body {
+        background-color: black;
+        overflow-x: hidden;
+        /* overflow-y: auto; */
       }
     </style>
   </head>
